--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
           ><img src="./images/logo.svg" alt="Логотип сучасної пекарні"
         /></a>
         <ul>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Шеф-кухарі</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a href="#tradition-section">Наші традиції</a></li>
+          <li><a href="#cookers-sections">Шеф-кухарі</a></li>
+          <li><a href="#formats-section">Формати</a></li>
+          <li><a href="#contacts-sections">Контакти</a></li>
         </ul>
         <button type="button">Замовити дзвінок</button>
       </nav>
@@ -24,7 +24,7 @@
       <section>
         <h1>Сучасна пекарня</h1>
       </section>
-      <section>
+      <section id="tradition-section">
         <ul>
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
@@ -45,7 +45,7 @@
           alt="Чоловык пекар дивиться на батони із посмішкою"
         />
       </section>
-      <section>
+      <section id="chefs-section">
         <h2>Наші найкращі шеф -кухарі</h2>
         <ul>
           <li>
@@ -69,7 +69,7 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="formats-section">
         <h2>Формати</h2>
         <ul>
           <li>
@@ -89,8 +89,16 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section id="contacts-sections">
         <h2>Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0LLRg9C70LjRhtGPINCh0ZbRh9C-0LLQuNGFINCh0YLRgNGW0LvRjNGG0ZbQsiwgNTQsINCa0LjRl9CyLCDQo9C60YDQsNGX0L3QsCwgMDIwMDA!5e0!3m2!1suk!2spl!4v1731524190186!5m2!1suk!2spl"
+          width="603"
+          height="595"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
       </section>
     </main>
     <footer>
@@ -123,7 +131,7 @@
           <li><a href="#"></a></li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2022 Дані захищені</p>
       </address>
     </footer>
   </body>
